roles/node/files/iptables
# Generated by iptables-save v1.4.7 on Mon Mar  7 05:08:47 2016
*nat
:PREROUTING ACCEPT [7:420]
:POSTROUTING ACCEPT [92:6568]
:OUTPUT ACCEPT [92:6568]
COMMIT
# Completed on Mon Mar  7 05:08:47 2016
# Generated by iptables-save v1.4.7 on Mon Mar  7 05:08:47 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [30:3080]
:rhc-app-comm - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8000 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8443 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 35531:65535 -j ACCEPT 
-A INPUT -j rhc-app-comm 
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Mon Mar  7 05:08:47 2016
